[tool.poetry]
name = "take-home-exercise-aganitha"
version = "0.1.0"
description = "Fetch PubMed papers with pharma/biotech authors"
authors = ["Ananthu <erananthu100@gmail.com>"]
readme = "README.md"
packages = [{ include = "pubmedfetcher" }]

[tool.poetry.dependencies]
python = ">=3.9,<3.14"
requests = "^2.32.4"
pandas = "^2.3.1"

[tool.poetry.scripts]
get-papers-list = "pubmedfetcher.main:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
